@@ -21,6 +21,8 @@
 	* pygtk-gtkplug.xml (gtk.plug_new_for_display) Add description.
 	(construct) Add warning - method not available since PyGTK 2.2
 
+	* pygtk-gtkradioaction.xml Add.
+
 2004-04-14  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkiconsource.xml Add gtk.icon_size_lookup_for_settings()
